[gd_scene load_steps=4 format=1]

[ext_resource path="res://join_game_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/join_game/join_bg.png" type="Texture" id=2]
[ext_resource path="res://ui/icons/back_arrow.png" type="Texture" id=3]

[node name="join_game_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="server_list" type="ScrollContainer" parent="."]

rect/min_size = Vector2( 450, 600 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 784.0
margin/top = 323.0
margin/right = 1234.0
margin/bottom = 923.0
scroll/horizontal = true
scroll/vertical = true

[node name="container" type="VBoxContainer" parent="server_list"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 425.0
margin/bottom = 100.0
alignment = 0

[node name="item" type="Panel" parent="server_list/container"]

rect/min_size = Vector2( 425, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 425.0
margin/bottom = 100.0

[node name="spacer" type="VBoxContainer" parent="server_list/container/item"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 425.0
margin/bottom = 100.0
alignment = 0

[node name="server_name" type="Label" parent="server_list/container/item/spacer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 43.0
margin/right = 425.0
margin/bottom = 57.0
text = "No Public Servers Available"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 138.0
margin/bottom = 128.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]


